RESOLVED FIXED88282
Leaking ClipRects
https://bugs.webkit.org/show_bug.cgi?id=88282
Summary Leaking ClipRects
Simon Fraser (smfr)
Reported 2012-06-04 20:29:39 PDT
We're leaking ClipRects, via: | WebCore::ThreadTimers::sharedTimerFired() ThreadTimers.cpp:94 | WebCore::ThreadTimers::sharedTimerFiredInternal() ThreadTimers.cpp:118 | WebCore::Timer<WebCore::FrameView>::fired() Timer.h:100 | WebCore::FrameView::layoutTimerFired(WebCore::Timer<WebCore::FrameView>*) FrameView.cpp:2034 | WebCore::FrameView::layout(bool) FrameView.cpp:1157 | WebCore::FrameView::performPostLayoutTasks() FrameView.cpp:2379 | WebCore::RenderView::updateWidgetPositions() RenderView.cpp:695 | WebCore::RenderWidget::updateWidgetPosition() RenderWidget.cpp:342 | WebCore::RenderWidget::updateWidgetGeometry() RenderWidget.cpp:186 | WebCore::RenderWidget::setWidgetGeometry(WebCore::FractionalLayoutRect const&) RenderWidget.cpp:156 | WebCore::RenderLayer::childrenClipRect() const RenderLayer.cpp:3970 | WebCore::RenderLayer::calculateRects(WebCore::RenderLayer const*, WebCore::RenderRegion*, WebCore::ClipRectsType, WebCore::FractionalLayoutRect const&, WebCore::FractionalLayoutRect&, WebCore::ClipRect&, WebCore::ClipRect&, WebCore::ClipRect&, WebCore::OverlayScrollbarSizeRelevancy) const RenderLayer.cpp:3913 | WebCore::RenderLayer::backgroundClipRect(WebCore::RenderLayer const*, WebCore::RenderRegion*, WebCore::ClipRectsType, WebCore::OverlayScrollbarSizeRelevancy) const RenderLayer.cpp:3898 | WebCore::RenderLayer::parentClipRects(WebCore::RenderLayer const*, WebCore::RenderRegion*, WebCore::ClipRectsType, WebCore::ClipRects&, WebCore::OverlayScrollbarSizeRelevancy) const RenderLayer.cpp:3879 | WebCore::RenderLayer::updateClipRects(WebCore::RenderLayer const*, WebCore::RenderRegion*, WebCore::ClipRectsType, WebCore::OverlayScrollbarSizeRelevancy) RenderLayer.cpp:3784 | WebCore::RenderLayer::updateClipRects(WebCore::RenderLayer const*, WebCore::RenderRegion*, WebCore::ClipRectsType, WebCore::OverlayScrollbarSizeRelevancy) RenderLayer.cpp:3784 | WebCore::RenderLayer::updateClipRects(WebCore::RenderLayer const*, WebCore::RenderRegion*, WebCore::ClipRectsType, WebCore::OverlayScrollbarSizeRelevancy) RenderLayer.cpp:3795 | WebCore::ClipRects::create(WebCore::ClipRects const&) RenderLayer.h:139 | WTF::fastMalloc(unsigned long) Probably a regression from r118562.
Attachments
Patch (2.49 KB, patch)
2012-06-04 21:42 PDT, Simon Fraser (smfr)
mitz: review+
Radar WebKit Bug Importer
Comment 1 2012-06-04 20:30:21 PDT
Simon Fraser (smfr)
Comment 2 2012-06-04 21:42:24 PDT
mitz
Comment 3 2012-06-04 21:53:59 PDT
Comment on attachment 145692 [details] Patch You can probably just make ClipRects a use RefCounted.
Simon Fraser (smfr)
Comment 4 2012-06-04 22:02:31 PDT
Darin Adler
Comment 5 2012-06-05 11:07:11 PDT
(In reply to comment #3) > You can probably just make ClipRects a use RefCounted. Can, and should!
Note You need to log in before you can comment on or make changes to this bug.